# seqbytes

./: Cargo.toml  README.md
src/: bytes.rs  lib.rs  prelude.rs  traits.rs
